--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://t.me/myththewolf"
   },
   "vpmDependencies": {
-    "com.vrchat.avatars": "3.10.1"
+    "dev.hai-vr.animator-as-code.v1.vrchat": "1.1.2",
+    "nadena.dev.ndmf": "1.10.1"
   }
 }
